<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkout_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CheckOutActivity">

    <TextView
        android:gravity="center_horizontal"
        android:text="@string/title_order"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#8B1A1A"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="#CDB5CD" />

    <LinearLayout
        android:background="#DBDBDB"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="#"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="30dp"
            android:layout_height="match_parent" />
        <View
            android:background="#6E6E6E"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/title_1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"/>
        <View
            android:background="#6E6E6E"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/title_2"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="40dp"
            android:layout_height="match_parent" />
        <View
            android:background="#6E6E6E"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/title_3"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="88dp"
            android:layout_height="match_parent" />
        <View
            android:background="#6E6E6E"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/title_4"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="95dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/checkout_recycler"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="#CD9B9B"
        android:layout_height="50dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="220dp"
            android:layout_height="match_parent">

            <TextView
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/title_sum"
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:textColor="#080808"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/total_sum"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:textColor="#080808"
                android:maxLength="5"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/RMB"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:textColor="#080808"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/confirm_order"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="end|center_vertical"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:textColor="@color/shape_checkout_button_text_color"
            android:textSize="16sp"
            android:background="@drawable/shape_checkout_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
