<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_dish"
            android:layout_width="92dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_margin="5dp"
            android:padding="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/rv1_txt1"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="#0F0F0F"
                    android:text="@string/main_ingredient"/>
                <TextView
                    android:id="@+id/rv1_txt2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="#0F0F0F" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="#0F0F0F"
                    android:textStyle="bold"
                    android:text="@string/price"/>
                <TextView
                    android:id="@+id/rv1_txt3"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:textColor="#0F0F0F"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/order"
                    android:onClick="orderBtn"
                    android:layout_gravity="end"
                    android:textSize="16sp"
                    android:text="@string/order"
                    android:textStyle="bold"
                    android:background="#CD8162"
                    android:textColor="#0F0F0F"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DBDBDB"/>

</LinearLayout>