<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vip_pager"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:background="@android:color/white"
    tools:context=".VipCardCheckActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/darkblue"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:showDividers="end"
        android:divider="@drawable/dashline"
        android:dividerHeight="1dp">
        <TextView
            android:paddingLeft="10dp"
            android:layout_marginBottom="35dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#4682B4"
            android:text="@string/vipTitle"
            android:layout_width="match_parent"
            android:layout_height="65dp" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="end"
        android:divider="@drawable/dashline"
        android:dividerHeight="1dp">
        <LinearLayout
            android:layout_marginBottom="23dp"
            android:paddingTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="43dp">

            <TextView
                android:text="@string/cardNum"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_width="80dp"
                android:layout_height="match_parent" />
            <EditText
                android:focusableInTouchMode="true"
                android:background="@drawable/shape_edit"
                android:layout_width="190dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="23dp"
            android:paddingTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="43dp">

            <TextView
                android:text="@string/password"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_width="80dp"
                android:layout_height="match_parent" />
            <EditText
                android:focusableInTouchMode="true"
                android:background="@drawable/shape_edit"
                android:layout_width="190dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:paddingTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="43dp">

            <TextView
                android:text="@string/verification_code"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_width="80dp"
                android:layout_height="match_parent" />
            <EditText
                android:id="@+id/etCheck"
                android:background="@drawable/shape_edit"
                android:layout_width="80dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/verification_code"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginLeft="12dp"
                android:background="#EEE0E5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center"
                    android:id="@+id/layVerify"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvHideA"
                        android:layout_width="43dp"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvHideB"
                        android:layout_width="43dp"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvHideC"
                        android:layout_width="43dp"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvHideD"
                        android:layout_width="43dp"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_height="43dp">

                    <ImageView
                        android:id="@+id/ivNumA"
                        android:layout_gravity="center_vertical"
                        android:layout_width="25dp"
                        android:gravity="center"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:id="@+id/ivNumB"
                        android:layout_gravity="center_vertical"
                        android:layout_width="25dp"
                        android:gravity="center"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:id="@+id/ivNumC"
                        android:layout_gravity="center_vertical"
                        android:layout_width="25dp"
                        android:gravity="center"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:id="@+id/ivNumD"
                        android:layout_gravity="center_vertical"
                        android:layout_width="25dp"
                        android:gravity="center"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCheck"
        android:layout_marginTop="18dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="#4F94CD"
        android:textSize="22sp"
        android:text="@string/text"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="22dp"
        android:paddingLeft="45dp"
        android:textColor="#303030"
        android:textSize="16sp"
        android:text="@string/hint1"
        android:layout_width="match_parent"
        android:layout_height="30dp" />
</LinearLayout>
