<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE5DE"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="18"
    tools:context="cn.studyjams.s1.sj52.myapplication.MainActivity">

    <LinearLayout
        android:id="@+id/line"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="#D2691E"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/swing"
            android:paddingLeft="15dp"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/moneypack"/>
        <TextView










































































            android:paddingLeft="25dp"
            android:gravity="center_vertical"
            android:text="@string/hint"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="7"
        android:layout_height="0dp">
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/viewPager_dot"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center">
        </LinearLayout>
        <TextView
            android:id="@+id/search"
            android:layout_width="72dp"
            android:layout_height="29dp"
            android:layout_margin="12dp"
            android:gravity="center_vertical"
            android:layout_gravity="top|end"
            android:background="@drawable/shape_search"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/search_icon"
            android:textColor="@android:color/white"/>
    </FrameLayout>


    <LinearLayout
        android:paddingTop="12dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="4"
        android:orientation="horizontal">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/specials"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            fresco:roundingBorderColor="#EEC900"
            fresco:roundingBorderWidth="3dp"
            fresco:actualImageScaleType="fitCenter"
            android:scaleType="centerInside"
            fresco:backgroundImage="@drawable/specials"
            fresco:roundAsCircle="true"
            android:onClick="specialsClick"/>
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/offer_today"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            fresco:roundingBorderColor="#EEC900"
            fresco:roundingBorderWidth="3dp"
            fresco:actualImageScaleType="fitCenter"
            fresco:backgroundImage="@drawable/offer_today"
            fresco:roundAsCircle="true"
            android:onClick="specialsClick"/>
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/hot_dish"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            fresco:roundingBorderColor="#EEC900"
            fresco:roundingBorderWidth="3dp"
            fresco:actualImageScaleType="fitCenter"
            fresco:backgroundImage="@drawable/hot_dish"
            fresco:roundAsCircle="true"
            android:onClick="specialsClick"/>
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/cold_dish"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            fresco:roundingBorderColor="#EEC900"
            fresco:roundingBorderWidth="3dp"
            fresco:actualImageScaleType="fitCenter"
            fresco:backgroundImage="@drawable/cold_dish"
            fresco:roundAsCircle="true"
            android:onClick="specialsClick"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="4"
        android:orientation="horizontal">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/soup"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            fresco:roundingBorderColor="#EEC900"
            fresco:roundingBorderWidth="3dp"
            fresco:actualImageScaleType="fitCenter"
            fresco:backgroundImage="@drawable/soup"
            fresco:roundAsCircle="true"
            android:onClick="specialsClick"/>
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/dessert"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            fresco:roundingBorderColor="#EEC900"
            fresco:roundingBorderWidth="3dp"
            fresco:actualImageScaleType="fitCenter"
            fresco:backgroundImage="@drawable/dessert"
            fresco:roundAsCircle="true"
            android:onClick="specialsClick"/>
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/staple_food"
            android:layout_marginRight="23dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            fresco:roundingBorderColor="#EEC900"
            fresco:roundingBorderWidth="3dp"
            fresco:actualImageScaleType="fitCenter"
            fresco:backgroundImage="@drawable/staple_food"
            fresco:roundAsCircle="true"
            android:onClick="specialsClick"/>
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/drinks"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            fresco:roundingBorderColor="#EEC900"
            fresco:roundingBorderWidth="3dp"
            fresco:actualImageScaleType="fitCenter"
            fresco:backgroundImage="@drawable/drinks"
            fresco:roundAsCircle="true"
            android:onClick="specialsClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/offer_icon"/>
        <TextView
            android:text="@string/specialsText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/background_dark"/>

    </LinearLayout>
    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="163dp"
        android:layout_height="3dp"
        android:background="#B22222" />
    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B22222" />

    <LinearLayout
        android:layout_weight="3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:background="@drawable/shape_frame"
            android:layout_marginLeft="10dp"
            android:text ="@string/offer_text"
            android:textColor="#EE2C2C"
            android:lines="3"
            android:gravity="center"
            android:ellipsize="end"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_frame"
            android:lines="3"
            android:ellipsize="end"
            android:text ="@string/offer_text1"
            android:textColor="#EE2C2C"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>


